--- a/styleObjetivos.css
+++ b/styleObjetivos.css
@@ -57,10 +57,10 @@ h1, h5, h6 {
    font-family: 'Open Sans', sans-serif;
 }
 h2{
-  color:#000000;
+  color: white;
   padding: 10px 7px 7px;
    font-family: 'Open Sans', sans-serif;
-   text-shadow: white 0.1em 0.0em 0.2em;
+   text-shadow: #000000 0.1em 0.0em 0.2em;
 }
 h3 {
   color: #000000;
@@ -78,7 +78,7 @@ h4{
 /* CAPAS DEL CONTENIDO*/
 
 #cabecera {
-  background: #617C99;
+  background: #5E6269;
   position: relative;
   display: block;
   margin-right: auto;
@@ -93,7 +93,7 @@ h4{
   width: 180px;
   height: 25px;
   position: relative;
-  background: #66ff66;
+  background: #33ffbd;
   top: 5px;
   left: -4px;
 }
@@ -116,7 +116,7 @@ h4{
   bottom: 0;
   width: 0;
   height: 0;
-  border-left: 12.98px solid #66ff66;
+  border-left: 12.98px solid #33ffbd;
   border-top: 13px solid transparent;
   border-bottom: 12.98px solid transparent;
 }
@@ -124,7 +124,7 @@ h4{
 #escenario{
   display: block;
   position: relative;
-  background: #DAE3E5;
+  background: #E8E8E8;
   margin-right: auto;
   margin-left: auto;
   border: solid 1px rgba(255,255,255,0);
