--- a/styleTema2.css
+++ b/styleTema2.css
@@ -2871,7 +2871,21 @@ height: 25px;
   width: 250px;
   -webkit-animation: seesaw 1s infinite;
 }
-
+.cajaTextoP4 {
+    position: absolute;
+    width:500px;
+    padding: 4px;
+    box-sizing: border-box;
+    border-radius: 20px 20px 20px 20px;
+    transform-style: preserve-3d;
+    background: -webkit-linear-gradient(top left, #f8eeee 50%, #f8eeee 50%);
+    background:    -moz-linear-gradient(top left, #f8eeee 50%, #f8eeee 50%);
+    background:     -ms-linear-gradient(top left, #f8eeee 50%, #f8eeee 50%);
+    background:      -o-linear-gradient(top left, #f8eeee 50%, #f8eeee 50%);
+    background:         linear-gradient(top left, #f8eeee 50%, #f8eeee 50%);
+    margin: 18px 155px;
+    box-shadow: 5px 5px 10px #ea4c88;
+}
 #Dcaja{
 margin:150px -480px;
 }
@@ -5585,3 +5599,216 @@ data-title {
   margin: 23px 257px;
   background: linear-gradient(to top, #f7babd 0%, #ffffff 100%);
 }
+
+/***PESTAÑA 6***/
+
+.box{
+	margin: -20px -10px;
+}
+.textbox {
+background: linear-gradient(to top, #c481fb 0%, #ffffff 100%);
+border-radius: 10px;
+padding: 5px;
+font-size: 20px;
+text-align: justify;
+font-family: 'Sansita';
+position: relative;
+color: black;
+width: 900px;
+height:125px;
+margin: -10px -90px;
+transform: translate(10%,10%);
+border-top: solid 2px white;
+transition: all .5s cubic-bezier(0.43, 0.26, 0, 1.87);
+animation: fromleft 2s 1;}
+
+.textbox:hover {
+background: white;
+border-top: solid 19px #4267b2;
+cursor: pointer;
+border-radius: 30px 0px;
+padding-bottom: 60px;
+color:#4267b2;
+}
+
+.site{
+font-weight: 900;
+color: white;
+position: relative;
+}
+
+#subtitulo6 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans';
+  text-shadow: 0 0 0.2em #7e1b9d, 0 0 0.2em #7e1b9d;
+  height: 0px;
+  font-size: 25px;
+  font-weight: bold;
+  margin: 125px 70px;
+}
+
+#subtitulo6 span {
+    font-style: normal;
+  }
+
+  #subtitulo7 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans';
+  text-shadow: 0 0 0.2em #7e1b9d, 0 0 0.2em #7e1b9d;
+  height: 0px;
+  font-size: 25px;
+  font-weight: bold;
+  margin: 260px 70px;
+}
+
+  #subtitulo7 span {
+    font-style: normal;
+  }
+
+#uno{
+	margin:110px -530px;;
+}
+
+#dos{
+	margin:245px -530px;;
+}
+
+.card3 {
+  margin: 0 auto 2rem;
+  padding: 1rem;
+  background-color: white;
+  word-wrap: break-word;
+  box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0 0.5em 0 -0.25em #f2f2f2,
+              0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1), 0 1em 0 -0.5em #e6e6e6,
+              0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
+  height: 90px;
+  left: -80px;
+  font-family: 'Sansita';
+  color: #000000;
+  text-align: justify;
+  font-size: 19px;
+  line-height: 1;
+ margin: 40px 590px;
+width: 365px;
+}
+
+.card3.card-secondary3 {
+  background-color: #6299C5;
+  box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 
+              0 0.5em 0 -0.25em #e6acc4, 0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1),
+              0 1em 0 -0.5em #7e1b9d, 0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
+}
+
+.card3 > :last-child {
+  margin-bottom: 0;
+}
+
+.card4 {
+  margin: 0 auto 2rem;
+  padding: 1rem;
+  background-color: white;
+  word-wrap: break-word;
+  box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0 0.5em 0 -0.25em #f2f2f2,
+              0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1), 0 1em 0 -0.5em #e6e6e6,
+              0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
+  height: 90px;
+  left: -80px;
+  font-family: 'Sansita';
+  color: #000000;
+  text-align: justify;
+  font-size: 19px;
+  line-height: 1;
+ margin: 30px 590px;
+width: 365px;
+}
+
+.card4.card-secondary4 {
+  background-color: #6299C5;
+  box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 
+              0 0.5em 0 -0.25em #e6acc4, 0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1),
+              0 1em 0 -0.5em #7e1b9d, 0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
+}
+
+.card4 > :last-child {
+  margin-bottom: 0;
+}
+/***
+.arrow3 {
+position: absolute;
+top: 50%;
+left: 44%;
+width: 120px;
+height: 50px;
+margin: -75px 0 0 -100px;
+}
+.arrow-part3 {
+  position: absolute;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  transform: rotate(45deg);
+  border-top: 4px solid #181414;
+  border-right: 4px solid #181414;
+}
+.arrow-part3:first-of-type {
+  animation: arrow-movement 2s ease-in-out infinite;
+}
+.arrow-part3:last-of-type {
+  animation: arrow-movement 2s 1s ease-in-out infinite;
+}
+
+@keyframes arrow-movement {
+  0% {
+    opacity: 0;
+    left: 25px;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.arrow4 {
+position: absolute;
+top: 50%;
+left: 44%;
+width: 120px;
+height: 50px;
+margin: -80px 0 0 30px;
+}
+.arrow-part4 {
+  position: absolute;
+  top: calc(50% - 60px);
+  left: calc(50% - 25px);
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  transform: rotate(45deg);
+  border-top: 4px solid #181414;
+  border-right: 4px solid #181414;
+}
+.arrow-part4:first-of-type {
+  animation: arrow-movement 2s ease-in-out infinite;
+}
+.arrow-part4:last-of-type {
+  animation: arrow-movement 2s 1s ease-in-out infinite;
+}
+
+@keyframes arrow-movement {
+  0% {
+    opacity: 0;
+    left: 25px;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}*/
